Fix header overlap on desktop and mobile version

--- a/main/src/App.css
+++ b/main/src/App.css
@@ -17,7 +17,7 @@
 }
 
 .content-list {
-  margin-top: 60px;
+  margin-top: 120px;
   margin-bottom: 60px;
 }
 .form-control {
@@ -210,7 +210,10 @@ footer#footer .version {
   .headerContainer {
     display: block;
     padding-top: 10px;
-    padding-bottom: 20px;
+  }
+
+  .container {
+    padding-top: 50px;
   }
 
   .content-list ul li + li {
